# baostock

./: .env.example  .gitignore  LICENSE  README.md  clean_data.sh  clean_memory.sh  config.yaml  pyproject.toml  start.sh
.github/workflows/: sync-from-gitee.yml
.sisyphus/plans/: dividend-report-null-records.md  dividend-report-request-log.md
docs/: BaoStock复权因子简介.md  README.md  api_request_log_analysis.md  claude评价.md  claude评价_第二次.md  code_review_2026-04-28.md  data_download_plan.md  download_flow.md  improvement_plan.md  ipo_based_download_optimization.md  monitor_design.md  optimization_plan.md  pythonAPI.md  rows_zero_analysis_2026-06-01.md  rows_zero_analysis_2026-06-03.md  sync_unified_download_plan.md  执行流程.md  数据分析.md  调度方案详细设计.html  调度方案详细设计.md
docs/UI/: baostock-web-ui.html
scripts/: analyze_latest_dates.py  check_blacklist.py  count_data.py  daily_report.py  download_all.py  estimate_data_volume.py  init_db.py  insert_null_profit_records.py  kill_baostock.sh  monitor_baostock.sh  update_daily.py
src/: __init__.py  config.py  config_loader.py  db_manager.py
src/downloaders/: __init__.py  base.py  component_downloader.py  dividend_downloader.py  financial_downloader.py  index_downloader.py  kline_downloader.py  macro_downloader.py  meta_downloader.py  report_downloader.py
src/utils/: helpers.py  validator.py
tests/: integration_test.py  smoke_test.py  smoke_test_controlled.py  test_concurrency.py  test_download_all_skip_logic.py  test_financial_skip_logic.py  test_helpers.py
