[project]
name = "baostock-project"
version = "0.1.0"
description = "BaoStock data downloader - download Chinese A-share market data to SQLite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "baostock>=0.9.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
